<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".NoteActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_previous"
        android:icon="@android:drawable/ic_media_previous"
        android:orderInCategory="101"
        android:title="@string/action_previous"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="102"
        android:title="@string/action_next"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="103"
        android:title="@string/send_as_email"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="104"
        android:title="@string/set_reminder"
        app:showAsAction="never" />
</menu>
