<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            android:defaultValue="Your Name"
            android:key="user_display_name"
            android:title="@string/pref_user_display_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="Your Email"
            android:key="user_email_address"
            android:title="@string/pref_title_email_address"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:entries="@array/social_media_entries"
            android:entryValues="@array/social_media_values"
            android:key="user_favorite_social"
            android:title="@string/pref_title_favorite_social" />

    </PreferenceCategory>

</PreferenceScreen>
